--- a/mini-todo/web/index.html
+++ b/mini-todo/web/index.html
@@ -9,10 +9,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>A Simple ToDo List Using HTML5 IndexedDB</title>
+    <title>A simple ToDo list using idb_shim</title>
     <link rel="stylesheet" href="todo.css">
   </head>
   <body>
+    <div id="idb">
+    idb_shim:
+    <a href="?idb_factory=browser">browser</a>
+    <a href="?idb_factory=persistent">persistent</a>
+    <a href="?idb_factory=native">native</a>
+    <a href="?idb_factory=websql">websql</a>
+    <a href="?idb_factory=memory">memory</a>
+    <span>...</span>
+    </div>
     <input type="text" id="todo" name="todo"
         placeholder="What do you need to do?">
     <input type="submit" id="submit" value="Add Todo Item">
