add viewport in html

--- a/mini-todo/web/index.html
+++ b/mini-todo/web/index.html
@@ -10,6 +10,7 @@
   <head>
     <meta charset="utf-8">
     <title>A simple ToDo list using idb_shim</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="todo.css">
   </head>
   <body>
