update count_down to use idb

--- a/tutorial_count_down/web/tute_countdown.html
+++ b/tutorial_count_down/web/tute_countdown.html
@@ -39,7 +39,7 @@
           
         </template>
         
-      <script type="application/dart;component=1" src="tute_countdown.dart"></script>
+      <script type="application/dart" src="tute_countdown.dart"></script>
     </polymer-element>
   </body>
 </html>
