--- a/tutorial_count_down/web/tute_milestone.html
+++ b/tutorial_count_down/web/tute_milestone.html
@@ -11,7 +11,7 @@
       <template>
         <span>{{milestone.timeRemainingAsString}}</span> <button on-click="{{removeMilestone}}">-</button>
       </template>
-      <script type="application/dart;component=1" src="tute_milestone.dart"></script>
+      <script type="application/dart" src="tute_milestone.dart"></script>
     </polymer-element>
   </body>
 </html>
