--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <p>Collection of small samples that uses <a href="http://alextekartik.github.io/idb_shim.dart/">idb_shim</a> polyfill, either created from scratch or from projects I found using indexeddb.</p>
 
 <ul>
-<li>Simple todo ported from <a href="https://github.com/dart-lang/dart-samples/tree/master/html5/web/indexeddb/todo">dart-lang</a> samples: <a href="http://alextekartik.github.io/idb_shim_samples.dart/mini-todo/build/web/index.html">live demo</a> | <a href="https://github.com/alextekartik/idb_shim_samples.dart/tree/master/mini-todo">source code</a>
+<li>Simple todo ported from <a href="https://github.com/dart-lang/dart-samples/tree/master/html5/web/indexeddb/todo">dart-lang</a> samples: <a href="http://alextekartik.github.io/idb_shim_samples.dart/tutorial_todo/build/web/index.html">live demo</a> | <a href="https://github.com/alextekartik/idb_shim_samples.dart/tree/master/tutorial_todo">source code</a>
+</li>
+<li>Simple count_down ported from <a href="https://github.com/dart-lang/dart-tutorials-samples/tree/master/web/count_down">dart-lang</a> samples: <a href="https://github.com/alextekartik/idb_shim_samples.dart/tree/master/tutorial_count_down">source code</a>
 </li>
 </ul><p>...more to come</p>
       </section>
