--- a/tutorial_todo/web/index.html
+++ b/tutorial_todo/web/index.html
@@ -27,6 +27,7 @@
         placeholder="What do you need to do?">
     <input type="submit" id="submit" value="Add Todo Item">
     <ul id="todo-items"></ul>
+    <p id="version">0.1.4</p>
     <script async type="application/dart" src="todo.dart"></script>
     <script async src="packages/browser/dart.js"></script>
   </body>
